fixing title spacing for slideshow

--- a/styles/components/Slideshow.module.scss
+++ b/styles/components/Slideshow.module.scss
@@ -50,8 +50,8 @@
 
         .slideshow_menu_title {
           padding: 0px 10px 0px 5px;
-          font-size: 50px !important;
-          line-height: 1;
+          font-size: 40px !important;
+          line-height: 50px;
         }
 
       .slideshow_icon {
